# chessvision

./: .clinerules  LICENSE  README.md  pyproject.toml  requirements.txt
chess-vision-lib/: README.md  pyproject.toml
chess-vision-lib/src/chess_vision/board/: detector.py  normalizer.py
chess-vision-service/: README.md  pyproject.toml
chess_video_analyzer/board/: detector.py  normalizer.py
chess_video_analyzer/cli/: main.py
chess_video_analyzer/moves/: tracker.py
chess_video_analyzer/notation/: generator.py
chess_video_analyzer/position/: extractor.py  validator.py
chess_video_analyzer/utils/: visualization.py
chess_video_analyzer/video/: frame.py  input.py
examples/: basic_usage.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
tests/: test_installation.py  test_video_input.py
