[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "chess-vision-lib"
version = "0.1.0"
description = "Core library for chess video analysis"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "chess_vision", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.7.0"
numpy = "^1.24.0"
python-chess = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"
black = "^23.3.0"
flake8 = "^6.0.0"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
