[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "chess-vision-service"
version = "0.1.0"
description = "Backend REST API service for chess video analysis"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "chess_vision_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
pydantic = "^1.10.7"
python-multipart = "^0.0.6"
chess-vision-lib = {path = "../chess-vision-lib", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"
black = "^23.3.0"
flake8 = "^6.0.0"
httpx = "^0.24.0"

[tool.poetry.scripts]
start = "chess_vision_service.main:start"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
